# ralph

./: .gitignore  .ralph  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  PROMPT.md  README.md  TESTING.md  build.rs  devbox.json  manifest
.beads/: .gitignore  metadata.json
.claude/: settings.json
.claude/commands/: ralph-spec.md
.claude/skills/brain-dump/: SKILL.md
.github/workflows/: notify-homebrew.yml  release.yml
scripts/: bd-retry.sh  intercept-bd.sh  intercept-build.sh  run-silent.sh
specs/: README.md  TEMPLATE.md  auto-continue.md  code-organization.md  config-modal-auto-continue.md  config-modal-mode-selector.md  config-modal.md  configuration.md  current-spec-detection.md  dead-code-cleanup.md  formatted-output-display.md  formatted-streaming-output.md  init-skip-existing.md  iteration-control.md  keep-awake.md  logging.md  output-panel-enhancements.md  output-panel-layout-refactor.md  project-config.md  project-init.md  project-readme.md  raw-json-streaming-viewer.md  release-process.md  remove-cli-args-field.md  simplified-command-panel.md  specs-panel.md  status-panel.md  task-tool-display.md  tasks-panel.md  testing.md  ui-overhaul.md  work-source-modes.md
src/: agent.rs  app.rs  bd_lock.rs  cli.rs  config.rs  db.rs  doctor.rs  dolt.rs  event_loop.rs  events.rs  execution.rs  logging.rs  main.rs  modal_ui.rs  modals.rs  output.rs  perf.rs  prompt_sniff.rs  specs.rs  startup.rs  templates.rs  tool_history.rs  tool_panel.rs  tool_settings.rs  ui.rs  validators.rs  wake_lock.rs  work_control.rs  work_source.rs  work_start.rs
src/agent/: epic.rs  lifecycle.rs  mod.rs  stale.rs  worktree.rs
src/app/: mod.rs  output.rs  polling.rs  state.rs
src/modals/: bead_picker.rs  board_columns.toml  config.rs  help.rs  init.rs  kanban.rs  mod.rs  quit.rs  specs_panel.rs  stale.rs  tool_allow.rs  workers_stream.rs
src/modals/config/: mod.rs  (+2 more)
src/ui/: draw.rs  mod.rs  tool_display.rs
(+10 files in other folders)
