[package]
name = "ralph"
version = "1.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/cmoel/ralph"
homepage = "https://github.com/cmoel/ralph"
description = "TUI wrapper for claude CLI that displays formatted streaming output"

[dependencies]
anyhow = "1.0.100"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
directories = "6.0"
dirs = "6.0"
keepawake = "0.6"
rand = "0.9"
